# explain-log

./: README.md
explain_log/: .gitignore  README.md  pyproject.toml  requirements.txt
explain_log/explain_log/: README.md  ai.py  cli.py  formatter.py  parser.py
explain_log/explain_log/explain_log/: formatter.py
